Prevent parallax tree apex clipping

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -64,8 +64,8 @@ body::before {
 
 .qtb-forest-far {
   z-index: 1;
-  bottom: 2vh;
-  height: 66vh;
+  bottom: 0;
+  height: 100vh;
   background-image: url("./static/trees-row-far.svg");
   background-size: 1900px 560px;
   animation: qtbForestFarScroll 420s linear infinite;
@@ -74,7 +74,7 @@ body::before {
 .qtb-forest-mid {
   z-index: 2;
   bottom: -2vh;
-  height: 76vh;
+  height: 100vh;
   background-image: url("./static/trees-row-mid.svg");
   background-size: 1800px 700px;
   animation: qtbForestMidScroll 260s linear infinite;
@@ -83,7 +83,7 @@ body::before {
 .qtb-forest-front {
   z-index: 3;
   bottom: -24vh;
-  height: 86vh;
+  height: 100vh;
   background-image: url("./static/trees-row-front.svg");
   background-size: 1600px 760px;
   animation: qtbForestFrontScroll 130s linear infinite;
